error
In file included from queue_socket.cpp:1:
In file included from ./queue_socket.h:9:
./stcp_socket.h:15:2: error: expected ';' after class
}
 ^
 ;
1 error generated.
